fix alignment issue of navigation links for mobile nav

--- a/client/src/components/header/Header.scss
+++ b/client/src/components/header/Header.scss
@@ -71,18 +71,20 @@
     }
 
     .navigation {
-        border: 1px solid red;
         flex-direction: column;
-        align-items: end;
 
         &__wrapper {
             flex-direction: column;
-            align-items: start;
+            align-items: center;
         }
 
         &__item {
+            align-self: end;
             width: fit-content;
-            border: 1px solid blue;
+
+            &:nth-child(2) {
+                margin-right: 0;
+            }
         }
     }
 }
